bynkc/tests/fixtures/positive/303_cross_context_collection_param/src/commerce/payment.bynk
context commerce.payment

service batch {
  on call(amounts: List[Int]) -> Effect[Result[Int, Int]] {
    Ok(1)
  }
}
