bynkc/tests/fixtures/negative/327_do_on_non_effect/input.bynk
commons demo.dononeff

fn bad() -> Effect[()] {
  do 5
}
